--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
+    "react-toastify": "^10.0.6",
     "zod": "^3.24.0"
   },
   "devDependencies": {
